# GUI_GenFirmware

./: .gitignore  README.md  index.html  package.json
FWUI/: FWUI.sln
FWUI/FWUI/: FirmwareBuilderForm.Designer.cs  FirmwareBuilderForm.cs  Form1.Designer.cs  Form1.cs  Program.cs
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
