[package]
name = "gui-gen-firmware"
version = "0.1.0"
description = "Firmware generation GUI built with Tauri, React, and Rust"
authors = ["YoonpyoHong"]
edition = "2021"

[lib]
name = "gui_gen_firmware_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
