[package]
name = "gui-gen-firmware"
version = "0.1.0"
description = "Firmware generation GUI built with Tauri, React, and Rust"
authors = ["YoonpyoHong"]
edition = "2021"

[lib]
name = "gui_gen_firmware_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rand = "0.8"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
